--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-HOST=https://certs-solutions.odoo.com/
-DB=certs-solutions
-USER_EMAIL=rolanvc@certs.com.ph
-API_KEY=6be5b1933f8e022b68599c831cd5f2099f6ded7f
+# HOST=https://certs-solutions.odoo.com/
+HOST=https://cv-solutions.odoo.com/
+DB=cv-solutions
+USER_EMAIL=certs.solutions@gmail.com
+# API_KEY=6be5b1933f8e022b68599c831cd5f2099f6ded7f
+API_KEY=2fbb8dfe4466a862ea8e548a9d87815ae83bbf69
